@@ -1,5 +1,6 @@
 package imd.smartmetropolis.aqueconnect.processors.hdfs;
 
+import lombok.extern.log4j.Log4j2;
 import org.apache.commons.io.IOUtils;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FSDataInputStream;
@@ -27,6 +28,7 @@ import static imd.smartmetropolis.aqueconnect.services.HDFSService.buildHATEOAS;
 /**
  * {@link HandleHDFSImpl}
  */
+@Log4j2
 public class HandleHDFSImpl implements HandleHDFS {
     public static final String BASE_PATH = "/user/data/";
 
@@ -63,10 +65,16 @@ public class HandleHDFSImpl implements HandleHDFS {
 
     @Override
     public BufferedReader openFileBuffer(String userId, String path) throws IOException {
-        String fullPath = BASE_PATH + userId + "/" + path;
-        Path hdfsReadPath = new Path(userId != null ? fullPath : path);
-        FSDataInputStream inputStream = fs.open(hdfsReadPath);
-        return new BufferedReader(new InputStreamReader(inputStream, StandardCharsets.UTF_8));
+        try {
+            String fullPath = BASE_PATH + userId + "/" + path;
+            Path hdfsReadPath = new Path(userId != null ? fullPath : path);
+            FSDataInputStream inputStream = fs.open(hdfsReadPath);
+            log.info("openFileBuffer: {}", path);
+            return new BufferedReader(new InputStreamReader(inputStream, StandardCharsets.UTF_8));
+        } catch (IOException e) {
+            log.error(e.getMessage() + " {}", e.getStackTrace());
+            throw new IOException();
+        }
     }
 
     @Override
@@ -81,8 +89,10 @@ public class HandleHDFSImpl implements HandleHDFS {
                 String line = reader.readLine() + "\n";
                 outputStream.writeBytes(line);
             }
+            log.info("writeFileInputStream: {}", path);
             outputStream.close();
         } catch (IOException e) {
+            log.error(e.getMessage() + " {}", e.getStackTrace());
             throw new Exception();
         }
     }
@@ -96,13 +106,15 @@ public class HandleHDFSImpl implements HandleHDFS {
             FSDataOutputStream outputStream = fs.create(hdfsWritePath, true);
             outputStream.writeBytes(fileContent);
             outputStream.close();
+            log.info("writeFileString: {}", path);
         } catch (IOException e) {
             e.printStackTrace();
+            log.error(e.getMessage() + " {}", e.getStackTrace());
         }
     }
 
     @Override
-    public String readFileLines(int lineCount, String userId, String path) {
+    public String readFileLines(int lineCount, String userId, String path) throws IOException {
         try {
             BufferedReader reader = openFileBuffer(userId, path);
             int countLine = 0;
@@ -113,104 +125,134 @@ public class HandleHDFSImpl implements HandleHDFS {
                 countLine++;
             }
             reader.close();
+            log.info("readFileLines: {} - Lines: {}", path, lineCount);
             return stringBuilder.toString();
         } catch (IOException e) {
             e.printStackTrace();
+            log.error(e.getMessage() + " {}", e.getStackTrace());
+            throw new IOException();
         }
-        return null;
     }
 
     @SuppressWarnings("unchecked")
     @Override
-    public List<ConcurrentHashMap<String, Object>> readFileJson(String userId, String path) {
-        String pathWriteFirstTime = BASE_PATH + userId + "/" + path;
-        Path hdfsReadPath = new Path(userId != null ? pathWriteFirstTime : path);
+    public List<ConcurrentHashMap<String, Object>> readFileJson(String userId, String path) throws Exception {
+        try {
+            String pathWriteFirstTime = BASE_PATH + userId + "/" + path;
+            Path hdfsReadPath = new Path(userId != null ? pathWriteFirstTime : path);
 
-        // Init input stream
-        String out = readFileAsString(hdfsReadPath);
-        JSONArray jsonArray = new JSONArray(out);
-
-        return jsonArray
-                .toList()
-                .stream()
-                .map(elem -> new ConcurrentHashMap<>(((Map<String, Object>) elem)))
-                .collect(Collectors.toList());
+            // Init input stream
+            String out = readFileAsString(hdfsReadPath);
+            JSONArray jsonArray = new JSONArray(out);
+            log.info("readFileJson: {}", path);
+            return jsonArray
+                    .toList()
+                    .stream()
+                    .map(elem -> new ConcurrentHashMap<>(((Map<String, Object>) elem)))
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            e.printStackTrace();
+            log.error(e.getMessage() + " {}", e.getStackTrace());
+            throw new Exception();
+        }
     }
 
     @Override
-    public String readFileAsString(Path hdfsReadPath) {
+    public String readFileAsString(Path hdfsReadPath) throws IOException {
         try {
             FSDataInputStream inputStream = fs.open(hdfsReadPath);
+            log.info("readFileAsString: {}", hdfsReadPath);
             return IOUtils.toString(inputStream, StandardCharsets.UTF_8);
         } catch (IOException e) {
             e.printStackTrace();
+            log.error(e.getMessage() + " {}", e.getStackTrace());
+            throw new IOException();
         }
-        return null;
     }
 
     @Override
     public Long lineCount(String userId, String path) throws IOException {
-        BufferedReader readerLines = openFileBuffer(userId, path);
-        Long linesCount = readerLines.lines().count();
-        readerLines.close();
-        return linesCount;
+        try {
+            BufferedReader readerLines = openFileBuffer(userId, path);
+            Long linesCount = readerLines.lines().count();
+            readerLines.close();
+            log.info("lineCount: {}", path);
+            return linesCount;
+        } catch (IOException e) {
+            e.printStackTrace();
+            log.error(e.getMessage() + " {}", e.getStackTrace());
+            throw new IOException();
+        }
     }
 
     @SuppressWarnings("ALL")
     @Override
-    public List<Map<String, Object>> listDirectory(String userId, String path) {
-        String pathString = path != null ? "/" + path : "";
-        String urlPath = WEB_HDFS_URL + userId + pathString + "?op=LISTSTATUS";
-        RestTemplate restTemplate = new RestTemplate();
-        ResponseEntity<Map> responseEntity = restTemplate.getForEntity(urlPath, Map.class);
-        Map<String, Object> objectMap = responseEntity.getBody();
-        if (objectMap != null && objectMap.containsKey("FileStatuses")) {
-            Map<String, Object> fileStatuses = (Map<String, Object>) objectMap.get("FileStatuses");
-            if (fileStatuses.containsKey("FileStatus")) {
-                List<Map<String, Object>> fileStatusList = (List<Map<String, Object>>) fileStatuses.get("FileStatus");
-                return fileStatusList.stream().map(elem -> buildHATEOAS(userId, elem)).collect(Collectors.toList());
+    public List<Map<String, Object>> listDirectory(String userId, String path) throws Exception {
+        try {
+            String pathString = path != null ? "/" + path : "";
+            String urlPath = WEB_HDFS_URL + userId + pathString + "?op=LISTSTATUS";
+            RestTemplate restTemplate = new RestTemplate();
+            ResponseEntity<Map> responseEntity = restTemplate.getForEntity(urlPath, Map.class);
+            Map<String, Object> objectMap = responseEntity.getBody();
+            if (objectMap != null && objectMap.containsKey("FileStatuses")) {
+                Map<String, Object> fileStatuses = (Map<String, Object>) objectMap.get("FileStatuses");
+                if (fileStatuses.containsKey("FileStatus")) {
+                    List<Map<String, Object>> fileStatusList = (List<Map<String, Object>>) fileStatuses.get("FileStatus");
+                    log.info("listDirectory: {}", path);
+                    return fileStatusList.stream().map(elem -> buildHATEOAS(userId, elem)).collect(Collectors.toList());
+                }
+                return null;
             }
             return null;
+        } catch (Exception e) {
+            e.printStackTrace();
+            log.error(e.getMessage() + " {}", e.getStackTrace());
+            throw new Exception();
         }
-        return null;
     }
 
     @Override
-    public boolean createDirectory(String userId, String name) {
+    public boolean createDirectory(String userId, String name) throws IOException {
         // Create a path
         Path directory = new Path(BASE_PATH + userId + "/" + name);
         try {
+            log.info("createDirectory {}", name);
             return fs.mkdirs(directory);
         } catch (IOException e) {
             e.printStackTrace();
+            log.error(e.getMessage() + " {}", e.getStackTrace());
+            throw new IOException();
         }
-        return false;
     }
 
     @Override
-    public boolean renameDirectoryOrFile(String userId, String oldName, String newName) {
+    public boolean renameDirectoryOrFile(String userId, String oldName, String newName) throws IOException {
         // Create a path
         String pathDefault = BASE_PATH + userId + "/";
         Path oldNamePath = new Path(pathDefault + oldName);
         Path newNamePath = new Path(pathDefault + newName);
         try {
+            log.info("renameDirectoryOrFile: oldName - {} | newName - {}", oldName, newName);
             return fs.rename(oldNamePath, newNamePath);
         } catch (IOException e) {
             e.printStackTrace();
+            log.error(e.getMessage() + " {}", e.getStackTrace());
+            throw new IOException();
         }
-        return false;
     }
 
     @Override
-    public boolean removeDirectoryOrFile(String userId, String name) {
+    public boolean removeDirectoryOrFile(String userId, String name) throws IOException {
         // Create a path
         Path directory = new Path(BASE_PATH + userId + "/" + name);
         try {
+            log.error("removeDirectoryOrFile: {}", name);
             return fs.delete(directory, true);
         } catch (IOException e) {
             e.printStackTrace();
+            log.error(e.getMessage() + " {}", e.getStackTrace());
+            throw new IOException();
         }
-        return false;
     }
 
 }
